--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
                         </div>
                         <h1>PARABENS MI!!</h1>
                         <br>
-                        <audio controls id="audio-parabens">
-                            <source src="audio/parabens-da-xuxa.mp3" type="audio/mpeg">
-                        </audio>
+                        <div class="col-4">
+                            <audio controls id="audio-parabens">
+                                <source src="audio/parabens-da-xuxa.mp3" type="audio/mpeg">
+                            </audio>
+                        </div>
                     </div>
                     <div class="row btn-row">
                         <div class="col">
