Including new version of flowers gif

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div id="page4" style="display: none;">
                     <div class="row justify-content-center">
                         <div class="d-flex col-4 justify-content-center">
-                            <img class="main-img" src="https://media1.tenor.com/m/ns27oDL6PPIAAAAC/cats-cat-with-flower.gif" alt="">
+                            <img class="main-img" src="img/flowers.gif" alt="">
                         </div>
                         <h1>Flores de presente pra ti, princesa! ❤</h1>
                     </div>
